Added new image and formatting for outlook

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     body {
         margin: 0;
         padding: 0;
-        font-family: sans-serif;
+        font-family: 'Roboto', Arial, 'sans-serif';
         max-width: 100%;
     }
 
@@ -82,13 +82,13 @@
                               
                                     <!-- LANGUAGE -->
 
-                                <table style="font-family: 'Roboto', sans-serif; width: 100%">
+                                <table style="font-family: 'Roboto', Arial, sans-serif; width: 100%">
                                     <tbody>
                                         <tr>
                                             <td > 
-                                                <a style="text-decoration: none; color: black" href=""><span id="languageSpan"></span></a>
+                                                <a style="text-decoration: none; color: black" href=""><span id="languageSpan">English</span></a>
                                             </td>
-                                            <td style="text-decoration: none; color: black" align="right" stye="font-family: 'Roboto', sans-serif;">
+                                            <td style="text-decoration: none; color: black" align="right" stye="font-family: 'Roboto', Arial, sans-serif;">
                                                     <a style="text-decoration: none; color: black" href="#">View in browser |</a><a style="text-decoration: none; color: black" href="#"> Voir ce courriel en francais</a> 
                                             </td>
                                         </tr>
@@ -97,10 +97,10 @@
 
                                 <!-- MAIN CONTAINER-->
 
-                                <table style="border: 1px solid lightgray;"> 
+                                <table > 
                                     <tbody>
                                         <tr>
-                                            <td>
+                                            <td style="border: 1px solid lightgray;">
 
                                                 <!-- BANNER -->
 
@@ -108,11 +108,14 @@
                                                     <tbody>
                                                         <tr>
                                                             <td>
-                                                                <img style="width: 50px; border-left: 30px solid #a30027; border-top: 30px solid #a30027; border-bottom: 20px solid #a30027 " src="assets/logo.png" alt="">
+
+                                                                <img style="width: 50px; border-left: 30px solid #a30027; border-top: 30px solid #a30027; border-bottom: 20px solid #a30027" src="assets/logo.png" alt="Jam company logo">
                                                             </td>
                                                         </tr>
                                                     </tbody>
                                                 </table>
+
+                                                
 
                                                 <!-- CONTENT CONTAINER -->
 
@@ -124,7 +127,7 @@
                                                                 <table style="width: 100%;">
                                                                     <tbody>
                                                                         <tr>
-                                                                            <td align="center" style="font-family: 'Oswald', sans-serif; font-size: 40px; border-bottom: 30px solid white; border-top: 30px solid white;">
+                                                                            <td align="center" style="font-family: 'Oswald', Arial, sans-serif; font-size: 40px; border-bottom: 30px solid white; border-top: 30px solid white;">
                                                                                 We're excited to see you
                                                                             </td>
                                                                         </tr>
@@ -134,7 +137,7 @@
                                                                 <table align="center" style="width: 90%; border-bottom: 30px solid white;">
                                                                     <tbody>
                                                                         <tr>
-                                                                            <td class="mainPara" stye="font-family: 'Roboto', sans-serif; width: 80%">
+                                                                            <td class="mainPara" stye="font-family: 'Roboto', Arial, sans-serif; width: 80%">
                                                                                 <span class="clientNameSpan">JOHN</span>, with the event fast approaching, we wanted to give you a breakdown of what we'll be doing at our meet & greet with <span id="execNameSpan">JOHN2</span> on Friday morning.
                                                                             </td>
                                                                         </tr>
@@ -151,13 +154,13 @@
                                                                                 <table align="center">
                                                                                     <tbody>
                                                                                         <tr>
-                                                                                            <td class="typogMobile" align="center" style="font-family: 'Oswald', sans-serif; width: 30%;font-weight: bold; display: block; font-size: 20px;" >
+                                                                                            <td class="typogMobile" align="center" style="font-family: 'Oswald', Arial, sans-serif; width: 30%; font-weight: bold; display: block; font-size: 20px;" >
                                                                                                 8:30 AM-9:30 AM
                                                                                             </td>
                                                                                         </tr>
                                                                                         <tr>
                                                                                             <td class="typogMobile" align="center" style="width: 90%; display: block; border-bottom: 10px solid white; border-top: 10px solid white;">
-                                                                                                <ul align="left" stye="font-family: 'Roboto', sans-serif; text-align: left;">
+                                                                                                <ul align="left" stye="font-family: 'Roboto', Arial, sans-serif; text-align: left;">
                                                                                                     <li style="color: #a30027"><span style="color: black">Meet in VIP Room of <a style="text-decoration: none; color: #a30027;" href="#">Maurice-Richard Arena</a>, located near the North entrance</span></li>
                                                                                                 </ul>
                                                                                             </td>
@@ -187,7 +190,7 @@
                                                                                                         </tr>
                                                                                                         <tr>
                                                                                                             <td>
-                                                                                                                <ul class="typogMobile" stye="font-family: 'Roboto', sans-serif;">
+                                                                                                                <ul class="typogMobile" stye="font-family: 'Roboto', Arial, sans-serif;">
                                                                                                                     <li style="color: #a30027">
                                                                                                                         <span class="clientNameSpan" style="color: black;">JOHN</span> 
                                                                                                                         <span style="color: black;"> train on ice</span>
@@ -212,7 +215,7 @@
                                                                                                         <tbody>
                                                                                                             <tr>
                                                                                                                 <td align="center;" class="imgMobile" style="background-color: lightgrey; border-radius: 50%;"> 
-                                                                                                                    <img align="center;" style="color: black; width: 100%;" src="assets/userImage.svg" alt="icon of an anonymous user">
+                                                                                                                    <img align="center;" style="color: black; width: 100%;" src="assets/userImage.png">
                                                                                                                 </td>
                                                                                                             </tr>
                                                                                                         </tbody>
@@ -234,13 +237,13 @@
                                                                                                 </td>
                                                                                             </tr>
                                                                                             <tr>
-                                                                                                <td align="center" class="typogMobile" style="font-family: 'Oswald', sans-serif; display: block; font-weight: bold; font-size: 20px; width: 15%;" >
+                                                                                                <td align="center" class="typogMobile" style="font-family: 'Oswald', Arial, sans-serif; display: block; font-weight: bold; font-size: 20px; width: 15%;" >
                                                                                                     11:45 AM
                                                                                                 </td>
                                                                                             </tr>
                                                                                             <tr>
                                                                                                 <td align="center" class="typogMobile">
-                                                                                                    <ul class="finalUl" align="left" stye="font-family: 'Roboto', sans-serif;">
+                                                                                                    <ul class="finalUl" align="left" stye="font-family: 'Roboto', Arial, sans-serif;">
                                                                                                         <li style="color: #a30027">
                                                                                                             <span style="color: black">Pick up lunch to go</span>
                                                                                                         </li>
@@ -262,7 +265,7 @@
 
                                                 </td>
 
-                                                <table stye="font-family: 'Roboto', sans-serif;">
+                                                <table stye="font-family: 'Roboto', Arial, sans-serif;">
                                                     <tbody>
                                                         <tr>
                                                             <td style="font-family: 'Roboto', sans-serif; font-size: 12px;">
@@ -270,7 +273,7 @@
                                                             </td>
                                                         </tr>
                                                         <tr>
-                                                            <td style="font-family: 'Roboto', sans-serif; font-size: 12px;">
+                                                            <td style="font-family: 'Roboto', Arial, sans-serif; font-size: 12px;">
                                                                 JAM Direct | 67 Mowat Ave, Toronto, ON M6K 3E3 | Copyright &copy; 2019, JAM Direct
                                                             </td>
                                                         </tr>
